Fix some mapping files

--- a/src/fabric-1.17/mappings/biomes.yaml
+++ b/src/fabric-1.17/mappings/biomes.yaml
@@ -80,4 +80,4 @@ bamboo_jungle_hills: BAMBOO_JUNGLE_HILLS
 soul_sand_valley: SOUL_SAND_VALLEY
 crimson_forest: CRIMSON_FOREST
 warped_forest: WARPED_FOREST
-basalt_delta: BASALT_DELTAS
+basalt_deltas: BASALT_DELTAS
