--- a/src/fabric-1.17/mappings/potions.yaml
+++ b/src/fabric-1.17/mappings/potions.yaml
@@ -32,3 +32,4 @@ SLOW_FALLING: StatusEffects.SLOW_FALLING
 CONDUIT_POWER: StatusEffects.CONDUIT_POWER
 DOLPHINS_GRACE: StatusEffects.DOLPHINS_GRACE
 BAD_OMEN: StatusEffects.BAD_OMEN
+HERO_OF_THE_VILLAGE: StatusEffects.HERO_OF_THE_VILLAGE
