--- a/src/fabric-1.17/mappings/materials.yaml
+++ b/src/fabric-1.17/mappings/materials.yaml
@@ -9,11 +9,12 @@ WATER: WATER
 LAVA: LAVA
 LEAVES: LEAVES
 PLANTS: PLANT
-REPLACEABLE_PLANT: REPLACEABLE_PLANT
+TALL_PLANTS: REPLACEABLE_PLANT
 SPONGE: SPONGE
 CLOTH: WOOL
 FIRE: FIRE
 SAND: SAND
+MISCELLANEOUS: DECORATION
 CARPET: CARPET
 GLASS: GLASS
 REDSTONE_LIGHT: REDSTONE_LAMP
@@ -25,6 +26,7 @@ SNOW: SNOW
 CRAFTED_SNOW: SNOW_BLOCK
 CACTUS: CACTUS
 CLAY: CLAY
+GOURD: GOURD
 DRAGON_EGG: EGG
 PORTAL: PORTAL
 CAKE: CAKE
@@ -39,6 +41,5 @@ BAMBOO_SAPLING: BAMBOO_SAPLING
 BAMBOO: BAMBOO
 BARRIER: BARRIER
 PISTON: PISTON
-PUMPKIN: PUMPKIN
-SOIL: SOUL_SOIL
+NETHER_PLANTS: NETHER_SHOOTS
 NETHER_WOOD: NETHER_WOOD
