--- a/src/fabric-1.17/workspacebase/build.gradle
+++ b/src/fabric-1.17/workspacebase/build.gradle
@@ -10,12 +10,12 @@ version = '1.0.0'
 group = 'com.yourname.modid'
 
 dependencies {
-	minecraft "com.mojang:minecraft:21w10a"
-	mappings "net.fabricmc:yarn:21w10a+build.10:v2"
+	minecraft "com.mojang:minecraft:1.16.5"
+	mappings "net.fabricmc:yarn:1.16.5+build.5:v2"
 	modImplementation "net.fabricmc:fabric-loader:0.11.3"
 
 	//Fabric api
-	modImplementation "net.fabricmc.fabric-api:fabric-api:0.32.2+1.17"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:0.32.0+1.16"
 }
 
 processResources {
