--- a/src/fabric-1.16.5/mappings/stepsounds.yaml
+++ b/src/fabric-1.16.5/mappings/stepsounds.yaml
@@ -1,17 +1,18 @@
-_default: GROUND
+_default: GRASS
 GROUND: GRASS
 WOOD: WOOD
-PLANT: PLANT
+PLANT: CROP
+LILY_PADS: LILY_PAD
 STONE: STONE
 METAL: METAL
 GLASS: GLASS
 CLOTH: WOOL
 SAND: SAND
-GRAVEL: GRAVEL
 SNOW: SNOW
 LADDER: LADDER
 ANVIL: ANVIL
 SLIME: SLIME
+HONEY: HONEY
 WET_GRASS: WET_GRASS
 CORAL: CORAL
 BAMBOO: BAMBOO
@@ -19,25 +20,29 @@ BAMBOO_SAPLING: BAMBOO_SAPLING
 SCAFFOLDING: SCAFFOLDING
 SWEET_BERRY_BUSH: SWEET_BERRY_BUSH
 CROP: CROP
+STEM: STEM
+VINE: VINE
 NETHER_WART: NETHER_WART
 LANTERN: LANTERN
-HONEY: HONEY
-NETHER_STEM: NETHER_STEM
+HYPHAE: NETHER_STEM
 NYLIUM: NYLIUM
 FUNGUS: FUNGUS
+ROOT: ROOT
 SHROOMLIGHT: SHROOMLIGHT
-WEEPING_VINES: WEEPING_VINES
+NETHER_VINE: WEEPING_VINES
+NETHER_VINE_LOWER_PITCH: WEEPING_VINES_LOWER_PITCH
 SOUL_SAND: SOUL_SAND
 SOUL_SOIL: SOUL_SOIL
 BASALT: BASALT
-WART_BLOCK: WART_BLOCK
+WART: WART_BLOCK
 NETHERRACK: NETHERRACK
-NETHER_BRICKS: NETHER_BRICKS
-NETHER_SPROUTS: NETHER_SPROUTS
+NETHER_BRICK: NETHER_BRICKS
+NETHER_SPROUT: NETHER_SPROUTS
+NETHER_ORE: NETHER_ORE
 BONE: BONE
 NETHERITE: NETHERITE
 ANCIENT_DEBRIS: ANCIENT_DEBRIS
 LODESTONE: LODESTONE
 CHAIN: CHAIN
+NETHER_GOLD: NETHER_GOLD_ORE
 GILDED_BLACKSTONE: GILDED_BLACKSTONE
-NETHER_GOLD_ORE: NETHER_GOLD_ORE
