--- a/src/fabric-1.16.5/mappings/sounds.yaml
+++ b/src/fabric-1.16.5/mappings/sounds.yaml
@@ -17,6 +17,7 @@ block.anvil.step: BLOCK_ANVIL_STEP
 block.anvil.use: BLOCK_ANVIL_USE
 item.armor.equip_chain: ITEM_ARMOR_EQUIP_CHAIN
 item.armor.equip_diamond: ITEM_ARMOR_EQUIP_DIAMOND
+item.armor.equip_netherite: iITEM_ARMOR_EQUIP_NETHERITE
 item.armor.equip_elytra: ITEM_ARMOR_EQUIP_ELYTRA
 item.armor.equip_generic: ITEM_ARMOR_EQUIP_GENERIC
 item.armor.equip_gold: ITEM_ARMOR_EQUIP_GOLD
@@ -61,7 +62,6 @@ block.grass.place: BLOCK_GRASS_PLACE
 block.grass.step: BLOCK_GRASS_STEP
 block.gravel.break: BLOCK_GRAVEL_BREk
 block.gravel.fall: BLOCK_GRAVEL_FALL
-block.gravel.hit: BLOCK_GRAVEL_HIT
 block.gravel.hit: BLOCK_GRAVEL_HIT
 block.gravel.place: BLOCK_GRAVEL_PLACE
 block.gravel.step: BLOCK_GRAVE,_STEP
@@ -134,6 +134,7 @@ block.tripwire.click_on: BLOCK_TRIPWIRE_CLICK_ON
 block.tripwire.detach: BLOCK_TRIPWIRE_DETACH
 block.water.ambient: BLOCK_WATER_AMBIENT
 block.waterlily.place: BLOCK_LILYPAD_PLACE
+block.vine.step: BLOCK_VINE_STEP
 block.wood.break: BLOCK_WOOD_BREAK
 block.wood.fall: BLOCK_WOOD_FALL
 block.wood.hit: BLOCK_WOOD_HIT
@@ -160,9 +161,6 @@ entity.bat.death: ENTITY_BAT_DEATH
 entity.bat.hurt: ENTITY_BAT_HURT
 entity.bat.loop: ENTITY_BAT_LOOP
 entity.bat.takeoff: ENTITY_BAT_TAKEOFF
-entity.bee.death: ENTITY_BEE_DEATH
-entity.bee.hurt: ENTITY_BEE_HURT
-entity.bee.loop: ENTITY_BEE_LOOP
 entity.bee.loop.aggressive: ENTITY_BEE_LOOP_AGGRESSIVE
 entity.blaze.ambient: ENTITY_BLAZE_AMBIENT
 entity.blaze.burn: ENTITY_BLAZE_BURN
@@ -338,6 +336,9 @@ entity.mooshroom.shear: ENTITY_MOOSHROOM_SHEAR
 entity.mule.ambient: ENTITY_MULE_AMBIENT
 entity.mule.chest: ENTITY_MULE_CHEST
 entity.mule.hurt: ENTITY_MULE_HURT
+entity.mule.death: ENTITY_MULE_DEATH
+entity.mule.angry: ENTITY_MULE_ANGRY
+entity.mule.eat: ENTITY_MULE_EAT
 entity.painting.break: ENTITY_PAINTING_BREAK
 entity.painting.place: ENTITY_PAINTING_PLACE
 entity.parrot.ambient: ENTITY_PARROT_AMBIENT
@@ -372,6 +373,16 @@ entity.parrot.imitate.wolf: ENTITY_PARROT_IMITATE_WITHER #LEGACY
 entity.parrot.imitate.zombie: ENTITY_PARROT_IMITATE_ZOMBIE
 entity.parrot.imitate.zombie_pigman: ENTITY_PARROT_IMITATE_ZOMBIE #LEGACY
 entity.parrot.imitate.zombie_villager: ENTITY_PARROT_IMITATE_ZOMBIE_VILLAGER
+entity.parrot.imitate.drowned: ENTITY_PARROT_IMITATE_DROWNED
+entity.parrot.imitate.guardian: ENTITY_PARROT_IMITATE_GUARDIAN
+entity.parrot.imitate.panda: ENTITY_PARROT_IMITATE_DROWNED #LEGACY
+entity.parrot.imitate.phantom: ENTITY_PARROT_IMITATE_PHANTOM
+entity.parrot.imitate.pillager: ENTITY_PARROT_IMITATE_PILLAGER
+entity.parrot.imitate.ravager: ENTITY_PARROT_IMITATE_RAVAGER
+entity.parrot.imitate.hoglin: ENTITY_PARROT_IMITATE_HOGLIN
+entity.parrot.imitate.piglin: ENTITY_PARROT_IMITATE_PIGLIN
+entity.parrot.imitate.piglin_brute: ENTITY_PARROT_IMITATE_PIGLIN_BRUTE
+entity.parrot.imitate.zoglin: ENTITY_PARROT_IMITATE_ZOGLIN
 entity.parrot.step: ENTITY_PARROT_STEP
 entity.pig.ambient: ENTITY_PIG_AMBIENT
 entity.pig.death: ENTITY_PIG_DEATH
@@ -450,6 +461,7 @@ entity.snowman.ambient: ENTITY_SNOW_GOLEM_AMBIENT
 entity.snowman.death: ENTITY_SNOW_GOLEM_DEATH
 entity.snowman.hurt: ENTITY_SNOW_GOLEM_HURT
 entity.snowman.shoot: ENTITY_SNOW_GOLEM_SHOOT
+entity.snowman.shear: ENTITY_SNOW_GOLEM_SHEAR
 entity.spider.ambient: ENTITY_SPIDER_AMBIENT
 entity.spider.death: ENTITY_SPIDER_DEATH
 entity.spider.hurt: ENTITY_SPIDER_HURT
@@ -545,6 +557,10 @@ music.end: MUSIC_END
 music.game: MUSIC_GAME
 music.menu: MUSIC_MENU
 music.nether: MUSIC_NETHER_NETHER_WASTES #LEGACY
+music.nether.basalt_deltas: MUSIC_NETHER_BASALT_DELTAS
+music.nether.crimson_forest: MUSIC_NETHER_CRIMSON_FOREST
+music.nether.soul_sand_valley: MUSIC_NETHER_SOUL_SAND_VALLEY
+music.nether.warped_forest: MUSIC_NETHER_WARPED_FOREST
 record.11: MUSIC_DISC_11
 record.13: MUSIC_DISC_13
 record.blocks: MUSIC_DISC_BLOCKS
@@ -557,6 +573,7 @@ record.stal: MUSIC_DISC_STAL
 record.strad: MUSIC_DISC_STRAD
 record.wait: MUSIC_DISC_WAIT
 record.ward: MUSIC_DISC_WARD
+record.pigstep: MUSIC_DISC_PIGSTE
 ui.button.click: UI_BUTTON_CLICK
 ui.toast.in: UI_TOAST_IN
 ui.toast.out: UI_TOAST_OUT
@@ -647,6 +664,7 @@ entity.fox.screech: ENTITY_FOX_SCREECH
 entity.fox.sleep: ENTITY_FOX_SLEEP
 entity.fox.sniff: ENTITY_FOX_SNIFF
 entity.fox.spit: ENTITY_FOX_SPIT
+entity.fox.teleport: ENTITY_FOX_TELEPORT
 block.wet_grass.break: BLOCK_WET_GRASS_BREAK
 block.wet_grass.fall: BLOCK_WET_GRASS_FALL
 block.wet_grass.hit: BLOCK_WET_GRASS_HIT
@@ -796,13 +814,12 @@ block.note_block.bit: BLOCK_NOTE_BLOCK_BIT
 block.note_block.banjo: BLOCK_NOTE_BLOCK_BANJO
 entity.evoker.celebrate: ENTITY_EVOKER_CELEBRATE
 entity.vindicator.celebrate: ENTITY_VINDICATOR_CELEBRATE
-entity.parrot.imitate.drowned: ENTITY_PARROT_IMITATE_DROWNED
-entity.parrot.imitate.guardian: ENTITY_PARROT_IMITATE_GUARDIAN
-entity.parrot.imitate.panda: ENTITY_PARROT_IMITATE_DROWNED #LEGACY
-entity.parrot.imitate.phantom: ENTITY_PARROT_IMITATE_PHANTOM
-entity.parrot.imitate.pillager: ENTITY_PARROT_IMITATE_PILLAGER
-entity.parrot.imitate.ravager: ENTITY_PARROT_IMITATE_RAVAGER
 block.honey_block.break: BLOCK_HONEY_BLOCK_BREAK
+block.honey_block.fall: BLOCK_HONEY_BLOCK_FALL
+block.honey_block.hit: BLOCK_HONEY_BLOCK_HIT
+block.honey_block.place: BLOCK_HONEY_BLOCK_PLACE
+block.honey_block.slide: BLOCK_HONEY_BLOCK_SLIDE
+block.honey_block.step: BLOCK_HONEY_BLOCK_STEP
 item.honey_bottle.drink: ITEM_HONEY_BOTTLE_DRINK
 entity.bee.death: ENTITY_BEE_DEATH
 entity.bee.hurt: ENTITY_BEE_HURT
@@ -840,81 +857,26 @@ block.basalt.fall: BLOCK_BASALT_FALL
 block.basalt.hit: BLOCK_BASALT_HIT
 block.basalt.place: BLOCK_BASALT_PLACE
 block.basalt.step: BLOCK_BASALT_STEP
+block.bone_block.break: BLOCK_BONE_BREAK
+block.bone_block.fall: BLOCK_BONE_FALL
+block.bone_block.hit: BLOCK_BONE_HIT
+block.bone_block.place: BLOCK_BONE_PLACE
+block.bone_block.step: BLOCK_BONE_STEP
 block.chain.break: BLOCK_CHAIN_BREAK
 block.chain.fall: BLOCK_CHAIN_FALL
 block.chain.hit: BLOCK_CHAIN_HIT
 block.chain.place: BLOCK_CHAIN_PLACE
 block.chain.step: BLOCK_CHAIN_STEP
-block.fungus.break: BLOCK_FUNGUS_BREAK
-block.fungus.fall: BLOCK_FUNGUS_FALL
-block.fungus.hit: BLOCK_FUNGUS_HIT
-block.fungus.place: BLOCK_FUNGUS_PLACE
-block.fungus.step: BLOCK_FUNGUS_STEP
-block.gilded_blackstone.break: BLOCK_GILDED_BLACKSTONE_BREAK
-block.gilded_blackstone.fall: BLOCK_GILDED_BLACKSTONE_FALL
-block.gilded_blackstone.hit: BLOCK_GILDED_BLACKSTONE_HIT
-block.gilded_blackstone.place: BLOCK_GILDED_BLACKSTONE_PLACE
-block.gilded_blackstone.step: BLOCK_GILDED_BLACKSTONE_STEP
-block.lodestone.break: BLOCK_LODESTONE_BREAK
-block.lodestone.fall: BLOCK_LODESTONE_FALL
-block.lodestone.hit: BLOCK_LODESTONE_HIT
-block.lodestone.place: BLOCK_LODESTONE_PLACE
-block.lodestone.step: BLOCK_LODESTONE_STEP
-block.netherite_block.break: BLOCK_NETHERITE_BLOCK_BREAK
-block.netherite_block.fall: BLOCK_NETHERITE_BLOCK_FALL
-block.netherite_block.hit: BLOCK_NETHERITE_BLOCK_HIT
-block.netherite_block.place: BLOCK_NETHERITE_BLOCK_PLACE
-block.netherite_block.step: BLOCK_NETHERITE_BLOCK_STEP
-block.nether_gold_ore.break: BLOCK_NETHER_GOLD_ORE_BREAK
-block.nether_gold_ore.fall: BLOCK_NETHER_GOLD_ORE_FALL
-block.nether_gold_ore.hit: BLOCK_NETHER_GOLD_ORE_HIT
-block.nether_gold_ore.place: BLOCK_NETHER_GOLD_ORE_PLACE
-block.nether_gold_ore.step: BLOCK_NETHER_GOLD_ORE_STEP
-block.nether_ore.break: BLOCK_NETHER_ORE_BREAK
-block.nether_ore.fall: BLOCK_NETHER_ORE_FALL
-block.nether_ore.hit: BLOCK_NETHER_ORE_HIT
-block.nether_ore.place: BLOCK_NETHER_ORE_PLACE
-block.nether_ore.step: BLOCK_NETHER_ORE_STEP
-block.nether_sprouts.break: BLOCK_NETHER_SPROUTS_BREAK
-block.nether_sprouts.fall: BLOCK_NETHER_SPROUTS_FALL
-block.nether_sprouts.hit: BLOCK_NETHER_SPROUTS_HIT
-block.nether_sprouts.palce: BLOCK_NETHER_SPROUTS_PLACE
-block.nether_sprouts.step: BLOCK_NETHER_SPROUTS_STEP
-block.nylium.break: BLOCK_NYLIUM_BREAK
-block.nylium.fall: BLOCK_NYLIUM_FALL
-block.nylium_hit: BLOCK_NYLIUM_HIT
-block.nylium.place: BLOCK_NYLIUM_PLACE
-block.nylium.step: BLOCK_NYLIUM_STEP
-block.respawn_anchor.ambient: BLOCK_RESPAWN_ANCHOR_AMBIENT
-block.respawn_anchor.charge: BLOCK_RESPAWN_ANCHOR_CHARGE
-block.respawn_anchor.deplete: BLOCK_RESPAWN_ANCHOR_DEPLETE
-block.respawn_anchor.set_spawn: BLOCK_RESPAWN_ANCHOR_SET_SPAWN
 block.roots.break: BLOCK_ROOTS_BREAK
 block.roots.fall: BLOCK_ROOTS_FALL
 block.roots.hit: BLOCK_ROOTS_HIT
 block.roots.place: BLOCK_ROOTS_PLACE
 block.roots.step: BLOCK_ROOTS_STEP
-block.shroomlight.break: BLOCK_SHROOMLIGHT_BREAK
-block.shroomlight.fall: BLOCK_SHROOMLIGHT_FALL
-block.shroomlight.hit: BLOCK_SHROOMLIGHT_HIT
-block.shroomlight.place: BLOCK_SHROOMLIGHT_PLACE
-block.shroomlight.step: BLOCK_SHROOMLIGHT_STEP
-block.smithing_table.use: BLOCK_SMITHING_TABLE_USE
-block.soul_soil.break: BLOCK_SOUL_SOIL_BREAK
-block.soul_soil.fall: BLOCK_SOUL_SOIL_FALL
-block.soul_soil.hit: BLOCK_SOUL_SOIL_HIT
-block.soul_soil.place: BLOCK_SOUL_SOIL_PLACE
-block.soul_soil.step: BLOCK_SOUL_SOIL_STEP
-block.wart_block.break: BLOCK_WART_BLOCK_BREAK
-block.wart_block.fall: BLOCK_WART_BLOCK_FALL
-block.wart_block.hit: BLOCK_WART_BLOCK_HIT
-block.wart_block.place: BLOCK_WART_BLOCK_PLACE
-block.wart_block.step: BLOCK_WART_BLOCK_STEP
-block.weeping_vines.break: BLOCK_WEEPING_VINES_BREAK
-block.weeping_vines.fall: BLOCK_WEEPING_VINES_FALL
-block.weeping_vines.hit: BLOCK_WEEPING_VINES_HIT
-block.weeping_vines.place: BLOCK_WEEPING_VINES_PLACE
-block.weeping_vines.step: BLOCK_WEEPING_VINES_STEP
+block.gilded_blackstone.break: BLOCK_GILDED_BLACKSTONE_BREAK
+block.gilded_blackstone.fall: BLOCK_GILDED_BLACKSTONE_FALL
+block.gilded_blackstone.hit: BLOCK_GILDED_BLACKSTONE_HIT
+block.gilded_blackstone.place: BLOCK_GILDED_BLACKSTONE_PLACE
+block.gilded_blackstone.step: BLOCK_GILDED_BLACKSTONE_STEP
 entity.hoglin.ambient: ENTITY_HOGLIN_AMBIENT
 entity.hoglin.angry: ENTITY_HOGLIN_ANGRY
 entity.hoglin.attack: ENTITY_HOGLIN_ATTACK
@@ -923,6 +885,57 @@ entity.hoglin.death: ENTITY_HOGLIN_DEATH
 entity.hoglin.hurt: ENTITY_HOGLIN_HURT
 entity.hoglin.retreat: ENTITY_HOGLIN_RETREAT
 entity.hoglin.step: ENTITY_HOGLIN_STEP
+block.lodestone.break: BLOCK_LODESTONE_BREAK
+block.lodestone.fall: BLOCK_LODESTONE_FALL
+block.lodestone.hit: BLOCK_LODESTONE_HIT
+block.lodestone.place: BLOCK_LODESTONE_PLACE
+block.lodestone.step: BLOCK_LODESTONE_STEP
+item.lodestone_compass.lock: ITEM_LODESTONE_COMPASS_LOCK
+block.nether_bricks.break: BLOCK_NETHER_BRICKS_BREAK
+block.nether_bricks.step: BLOCK_NETHER_BRICKS_STEP
+block.nether_bricks.place: BLOCK_NETHER_BRICKS_PLACE
+block.nether_bricks.hit: BLOCK_NETHER_BRICKS_HIT
+block.nether_bricks.fall: BLOCK_NETHER_BRICKS_FALL
+block.stem.break: BLOCK_STEM_BREAK
+block.stem.step: BLOCK_STEM_STEP
+block.stem.place: BLOCK_STEM_PLACE
+block.stem.hit: BLOCK_STEM_HIT
+block.stem.fall: BLOCK_STEM_FALL
+block.nylium.break: BLOCK_NYLIUM_BREAK
+block.nylium.fall: BLOCK_NYLIUM_FALL
+block.nylium_hit: BLOCK_NYLIUM_HIT
+block.nylium.place: BLOCK_NYLIUM_PLACE
+block.nylium.step: BLOCK_NYLIUM_STEP
+block.nether_sprouts.break: BLOCK_NETHER_SPROUTS_BREAK
+block.nether_sprouts.fall: BLOCK_NETHER_SPROUTS_FALL
+block.nether_sprouts.hit: BLOCK_NETHER_SPROUTS_HIT
+block.nether_sprouts.palce: BLOCK_NETHER_SPROUTS_PLACE
+block.nether_sprouts.step: BLOCK_NETHER_SPROUTS_STEP
+block.fungus.break: BLOCK_FUNGUS_BREAK
+block.fungus.fall: BLOCK_FUNGUS_FALL
+block.fungus.hit: BLOCK_FUNGUS_HIT
+block.fungus.place: BLOCK_FUNGUS_PLACE
+block.fungus.step: BLOCK_FUNGUS_STEP
+block.weeping_vines.break: BLOCK_WEEPING_VINES_BREAK
+block.weeping_vines.fall: BLOCK_WEEPING_VINES_FALL
+block.weeping_vines.hit: BLOCK_WEEPING_VINES_HIT
+block.weeping_vines.place: BLOCK_WEEPING_VINES_PLACE
+block.weeping_vines.step: BLOCK_WEEPING_VINES_STEP
+block.wart_block.break: BLOCK_WART_BLOCK_BREAK
+block.wart_block.fall: BLOCK_WART_BLOCK_FALL
+block.wart_block.hit: BLOCK_WART_BLOCK_HIT
+block.wart_block.place: BLOCK_WART_BLOCK_PLACE
+block.wart_block.step: BLOCK_WART_BLOCK_STEP
+block.netherite_block.break: BLOCK_NETHERITE_BLOCK_BREAK
+block.netherite_block.fall: BLOCK_NETHERITE_BLOCK_FALL
+block.netherite_block.hit: BLOCK_NETHERITE_BLOCK_HIT
+block.netherite_block.place: BLOCK_NETHERITE_BLOCK_PLACE
+block.netherite_block.step: BLOCK_NETHERITE_BLOCK_STEP
+block.netherrack.break: BLOCK_NETHERRACK_BREAK
+block.netherrack.step: BLOCK_NETHERRACK_STEP
+block.netherrack.place: BLOCK_NETHERRACK_PLACE
+block.netherrack.hit: BLOCK_NETHERRACK_HIT
+block.netherrack.fall: BLOCK_NETHERRACK_FALL
 entity.piglin.admiring_item: ENTITY_PIGLIN_ADMIRING_ITEM
 entity.piglin.ambient: ENTITY_PIGLIN_AMBIENT
 entity.piglin.angry: ENTITY_PIGLIN_ANGRY
@@ -939,6 +952,36 @@ entity.piglin_brute.death: ENTITY_PIGLIN_BRUTE_DEATH
 entity.piglin_brute.hurt: ENTITY_PIGLIN_BRUTE_HURT
 entity.piglin_brute.step: ENTITY_PIGLIN_BRUTE_STEP
 entity.piglin_brute.converted_to_zombified: ENTITY_PIGLIN_BRUTE_CONVERTED_TO_ZOMBIFIED
+block.nether_gold_ore.break: BLOCK_NETHER_GOLD_ORE_BREAK
+block.nether_gold_ore.fall: BLOCK_NETHER_GOLD_ORE_FALL
+block.nether_gold_ore.hit: BLOCK_NETHER_GOLD_ORE_HIT
+block.nether_gold_ore.place: BLOCK_NETHER_GOLD_ORE_PLACE
+block.nether_gold_ore.step: BLOCK_NETHER_GOLD_ORE_STEP
+block.nether_ore.break: BLOCK_NETHER_ORE_BREAK
+block.nether_ore.fall: BLOCK_NETHER_ORE_FALL
+block.nether_ore.hit: BLOCK_NETHER_ORE_HIT
+block.nether_ore.place: BLOCK_NETHER_ORE_PLACE
+block.nether_ore.step: BLOCK_NETHER_ORE_STEP
+block.respawn_anchor.ambient: BLOCK_RESPAWN_ANCHOR_AMBIENT
+block.respawn_anchor.charge: BLOCK_RESPAWN_ANCHOR_CHARGE
+block.respawn_anchor.deplete: BLOCK_RESPAWN_ANCHOR_DEPLETE
+block.respawn_anchor.set_spawn: BLOCK_RESPAWN_ANCHOR_SET_SPAWN
+block.shroomlight.break: BLOCK_SHROOMLIGHT_BREAK
+block.shroomlight.fall: BLOCK_SHROOMLIGHT_FALL
+block.shroomlight.hit: BLOCK_SHROOMLIGHT_HIT
+block.shroomlight.place: BLOCK_SHROOMLIGHT_PLACE
+block.shroomlight.step: BLOCK_SHROOMLIGHT_STEP
+block.soul_sand.break: BLOCK_SOUL_SAND_BREAK
+block.soul_sand.step: BLOCK_SOUL_SAND_STEP
+block.soul_sand.place: BLOCK_SOUL_SAND_PLACE
+block.soul_sand.hit: BLOCK_SOUL_SAND_HIT
+block.soul_sand.fall: BLOCK_SOUL_SAND_FALL
+block.soul_soil.break: BLOCK_SOUL_SOIL_BREAK
+block.soul_soil.fall: BLOCK_SOUL_SOIL_FALL
+block.soul_soil.hit: BLOCK_SOUL_SOIL_HIT
+block.soul_soil.place: BLOCK_SOUL_SOIL_PLACE
+block.soul_soil.step: BLOCK_SOUL_SOIL_STEP
+particle.soul_escape: PARTICLE_SOUL_ESCAPE
 entity.strider.ambient: ENTITY_STRIDER_AMBIENT
 entity.strider.death: ENTITY_STRIDER_DEATH
 entity.strider.eat: ENTITY_STRIDER_EAT
@@ -954,11 +997,4 @@ entity.zoglin.attack: ENTITY_ZOGLIN_ATTACK
 entity.zoglin.death: ENTITY_ZOGLIN_DEATH
 entity.zoglin.hurt: ENTITY_ZOGLIN_HURT
 entity.zoglin.step: ENTITY_ZOGLIN_STEP
-item.armor.equip_netherite: ITEM_ARMOR_EQUIP_NETHERITE
-item.lodestone_compass.lock: ITEM_LODESTONE_COMPASS_LOCK
-music.nether.basalt_deltas: MUSIC_NETHER_BASALT_DELTAS
-music.nether.crimson_forest: MUSIC_NETHER_CRIMSON_FOREST
-music.nether.nether_wastes: MUSIC_NETHER_NETHER_WASTES
-music.nether.soul_sand_valley: MUSIC_NETHER_SOUL_SAND_VALLEY
-music.nether.warped_forest: MUSIC_NETHER_WARPED_FOREST
-particle.soul_escape: PARTICLE_SOUL_ESCAPE
+block.smithing_table.use: BLOCK_SMITHING_TABLE_USE
