--- a/src/fabric-1.16.5/generator.yaml
+++ b/src/fabric-1.16.5/generator.yaml
@@ -1,8 +1,8 @@
 name: Minecraft Fabric for 1.16.5 - 0.32.5
 basefeatures: [model_json, variables]
-partial_support: [armors, block, dimension, item, overlay, plant, procedure]
+partial_support: [armor, block, dimension, item, overlay, plant, procedure, entity]
 status: dev
-buildfileversion: 0.32.5.1
+buildfileversion: 0.32.5.2
 
 gradle:
   setup_task: tasks
