Fix Material mappings

--- a/src/fabric-1.16.5/mappings/materials.yaml
+++ b/src/fabric-1.16.5/mappings/materials.yaml
@@ -1,6 +1,6 @@
-_default: EARTH
-EARTH: EARTH
-GRASS: ORGANIC
+_default: SOIL
+EARTH: SOIL
+GRASS: ORGANIC_PRODUCT
 WOOD: WOOD
 ROCK: STONE
 IRON: METAL
@@ -13,16 +13,16 @@ TALL_PLANTS: REPLACEABLE_PLANT
 SPONGE: SPONGE
 CLOTH: WOOL
 FIRE: FIRE
-SAND: SAND
-MISCELLANEOUS: DECORATION
+SAND: AGGREGATE
+MISCELLANEOUS: SOLID_ORGANIC
 CARPET: CARPET
 GLASS: GLASS
 REDSTONE_LIGHT: REDSTONE_LAMP
 TNT: TNT
 CORAL: CORAL
 ICE: ICE
-PACKED_ICE: PACKED_ICE
-SNOW: SNOW
+PACKED_ICE: DENSE_ICE
+SNOW: SNOW_LAYER
 CRAFTED_SNOW: SNOW_BLOCK
 CACTUS: CACTUS
 CLAY: CLAY
@@ -34,7 +34,7 @@ WEB: COBWEB
 AIR: AIR
 STRUCTURE_VOID: STRUCTURE_VOID
 OCEAN_PLANT: UNDERWATER_PLANT
-SEA_GRASS: SEA_GRASS
+SEA_GRASS: UNDERWATER_PLANT
 BUBBLE_COLUMN: BUBBLE_COLUMN
 SHULKER: SHULKER_BOX
 BAMBOO_SAPLING: BAMBOO_SAPLING
