Fix some sound mappings

--- a/src/fabric-1.16.5/mappings/sounds.yaml
+++ b/src/fabric-1.16.5/mappings/sounds.yaml
@@ -832,21 +832,21 @@ block.beehive.enter: BLOCK_BEEHIVE_ENTER
 block.beehive.exit: BLOCK_BEEHIVE_EXIT
 block.beehive.shear: BLOCK_BEEHIVE_SHEAR
 block.beehive.work: BLOCK_BEEHIVE_WORK
-ambiant.basalt_deltas.additions: AMBIENT_BASALT_DELTAS_ADDITIONS
-ambiant.basalt_deltas.loop: AMBIENT_BASALT_DELTAS_LOOP
-ambiant.basalt_deltas.mood: AMBIENT_BASALT_DELTAS_MOOD
-ambiant.crimson_forest.additions: AMBIENT_CRIMSON_FOREST_ADDITIONS
-ambiant.crimson_forest.loop: AMBIENT_CRIMSON_FOREST_LOOP
-ambiant.crimson_forest.mood: AMBIENT_CRIMSON_FOREST_MOOD
-ambiant.nether_wastes.additions: AMBIENT_NETHER_WASTES_ADDITIONS
-ambiant.nether_wastes.loop: AMBIENT_NETHER_WASTES_LOOP
-ambiant.nether_wastes.mood: AMBIENT_NETHER_WASTES_MOOD
-ambiant.soul_sand_valley.additions: AMBIENT_SOUL_SAND_VALLEY_ADDITIONS
-ambiant.soul_sand_valley.loop: AMBIENT_SOUL_SAND_VALLEY_LOOP
-ambiant.soul_sand_valley.mood: AMBIENT_SOUL_SAND_VALLEY_MOOD
-ambiant.warped_fores.additions: AMBIENT_WARPED_FOREST_ADDITIONS
-ambiant.warped_forest.loop: AMBIENT_WARPED_FOREST_LOOP
-ambiant.warped_forest.mood: AMBIENT_WARPED_FOREST_MOOD
+ambient.basalt_deltas.additions: AMBIENT_BASALT_DELTAS_ADDITIONS
+ambient.basalt_deltas.loop: AMBIENT_BASALT_DELTAS_LOOP
+ambient.basalt_deltas.mood: AMBIENT_BASALT_DELTAS_MOOD
+ambient.crimson_forest.additions: AMBIENT_CRIMSON_FOREST_ADDITIONS
+ambient.crimson_forest.loop: AMBIENT_CRIMSON_FOREST_LOOP
+ambient.crimson_forest.mood: AMBIENT_CRIMSON_FOREST_MOOD
+ambient.nether_wastes.additions: AMBIENT_NETHER_WASTES_ADDITIONS
+ambient.nether_wastes.loop: AMBIENT_NETHER_WASTES_LOOP
+ambient.nether_wastes.mood: AMBIENT_NETHER_WASTES_MOOD
+ambient.soul_sand_valley.additions: AMBIENT_SOUL_SAND_VALLEY_ADDITIONS
+ambient.soul_sand_valley.loop: AMBIENT_SOUL_SAND_VALLEY_LOOP
+ambient.soul_sand_valley.mood: AMBIENT_SOUL_SAND_VALLEY_MOOD
+ambient.warped_fores.additions: AMBIENT_WARPED_FOREST_ADDITIONS
+ambient.warped_forest.loop: AMBIENT_WARPED_FOREST_LOOP
+ambient.warped_forest.mood: AMBIENT_WARPED_FOREST_MOOD
 block.ancient_debris.break: BLOCK_ANCIENT_DEBRIS_BREAK
 block.ancient_debris.fall: BLOCK_ANCIENT_DEBRIS_FALL
 block.ancient_debris.hit: BLOCK_ANCIENT_DEBRIS_HIT
