Added support for Living entities (#109)
* Fix plant triggers

* Update header license notice

* Custom entty part 1

* Support for custom models

* Update build.gradle

* Support for built-in models and Glow layer

* Support boss bar

* Support sounds

* Fix some sound mappings

* Entity Base + Drop + immunes + When mob is hurt trigger

* Support particles

* Fix some bugs

* Support triggers

* Support AI tasks (part 1)

* Support AI Tasks (part 2)

* Support breedable and tameable entities + Fix some bugs

* Support for breedable and tameable entities + fix some bugs

* Full support for water entities

* Support for ridable entities

* Last changes

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ class Globals {
     }
 }
 
+// workaround for IDEA-265203
+System.setProperty("user.dir", projectDir.toString())
+
 task build(type: Zip) {
     from 'src'
     archiveName = Globals.getArchiveName()
@@ -51,7 +54,7 @@ task launch {
             }
         } else if (Os.isFamily(Os.FAMILY_WINDOWS)) {
             try {
-                ProcessBuilder builder = new ProcessBuilder("C://Program Files/Pylo/MCreatorEAP20211b12313/mcreator.exe")
+                ProcessBuilder builder = new ProcessBuilder("C://Program Files/Pylo/MCreator/mcreator.exe")
                 builder.redirectOutput(ProcessBuilder.Redirect.INHERIT)
                 builder.redirectError(ProcessBuilder.Redirect.INHERIT)
                 builder.start()
