--- a/src/fabric-1.16.5/generator.yaml
+++ b/src/fabric-1.16.5/generator.yaml
@@ -2,7 +2,8 @@ name: Minecraft Fabric for 1.16.5 - 0.32.5
 basefeatures: [model_json, model_java, variables]
 partial_support: [armor, block, dimension, item, overlay, plant, procedure, entity]
 status: dev
-buildfileversion: 0.32.5.2
+buildfileversion: 0.32.5
+subversion: 1.0.2
 
 gradle:
   setup_task: tasks
