--- a/src/fabric-1.16.5/mappings/stepsounds.yaml
+++ b/src/fabric-1.16.5/mappings/stepsounds.yaml
@@ -1,7 +1,7 @@
 _default: GRASS
-GROUND: GRASS
+GROUND: GRAVEL
 WOOD: WOOD
-PLANT: CROP
+PLANT: GRASS
 LILY_PADS: LILY_PAD
 STONE: STONE
 METAL: METAL
