Changed from 1.17 mappings to 1.16.5

--- a/src/fabric-1.16.5/mappings/mapcolors.yaml
+++ b/src/fabric-1.16.5/mappings/mapcolors.yaml
@@ -1,21 +1,19 @@
 _default: DEFAULT
 DEFAULT: DEFAULT
 AIR: CLEAR
-GRASS: PALE_GREEN
-SAND: PALE_YELLOW
-CLOTH: WHITE_GRAY
-TNT: BRIGHT_RED
-ICE: PALE_PURPLE
-IRON: IRON_GRAY
-FOLIAGE: DARK_GREEN
-SNOW: WHITE
-CLAY: LIGHT_BLUE_GRAY
-DIRT: DIRT_BROWN
-STONE: STONE_GRAY
-WATER: WATER_BLUE
-WOOD: OAK_TAN
-QUARTZ: OFF_WHITE
-ADOBE: RED
+GRASS: GRASS
+SAND: SAND
+ICE: ICE
+IRON: IRON
+FOLIAGE: FOLIAGE
+SNOW: SNOW
+CLAY: CLAY
+DIRT: DIRT
+STONE: STONE
+WATER: WATER
+WOOD: WOOD
+QUARTZ: QUARTZ
+ADOBE: ADOBE
 MAGENTA: MAGENTA
 LIGHT_BLUE: LIGHT_BLUE
 YELLOW: YELLOW
@@ -31,32 +29,31 @@ GREEN: GREEN
 RED: RED
 BLACK: BLACK
 GOLD: GOLD
-DIAMOND: DIAMOND_BLUE
-LAPIS: LAPIS_BLUE
-EMERALD: EMERALD_GREEN
-OBSIDIAN: BLACK
-NETHERRACK: DARK_RED
-WHITE_TERRACOTTA: TERRACOTTA_WHITE
-ORANGE_TERRACOTTA: TERRACOTTA_ORANGE
-MAGENTA_TERRACOTTA: TERRACOTTA_MAGENTA
-LIGHT_BLUE_TERRACOTTA: TERRACOTTA_LIGHT_BLUE
-YELLOW_TERRACOTTA: TERRACOTTA_YELLOW
-LIME_TERRACOTTA: TERRACOTTA_LIME
-PINK_TERRACOTTA: TERRACOTTA_PINK
-GRAY_TERRACOTTA: TERRACOTTA_GRAY
-LIGHT_GRAY_TERRACOTTA: TERRACOTTA_LIGHT_GRAY
-CYAN_TERRACOTTA: TERRACOTTA_CYAN
-PURPLE_TERRACOTTA: TERRACOTTA_PURPLE
-BLUE_TERRACOTTA: TERRACOTTA_BLUE
-BROWN_TERRACOTTA: TERRACOTTA_BROWN
-GREEN_TERRACOTTA: TERRACOTTA_GREEN
-RED_TERRACOTTA: TERRACOTTA_RED
-BLACK_TERRACOTTA: TERRACOTTA_BLACK
-SPRUCE: SPRUCE_BROWN
-CRIMSON_NYLIUM: DULL_RED
-CRIMSON_STEM: DULL_PINK
-CRIMSON_HYPHAE: DARK_CRIMSON
-WARPED_NYLIUM: TEAL
-WARPED_STEM: DARK_AQUA
-WARPED_HYPHAE: DARK_DULL_PINK
-WARPED_WART: BRIGHT_TEAL
+DIAMOND: DIAMOND
+LAPIS: LAPIS
+EMERALD: EMERALD
+NETHERRACK: NETHER
+WHITE_TERRACOTTA: WHITE_TERRACOTTA
+ORANGE_TERRACOTTA: ORANGE_TERRACOTTA
+MAGENTA_TERRACOTTA: MAGENTA_TERRACOTTA
+LIGHT_BLUE_TERRACOTTA: LIGHT_BLUE_TERRACOTTA
+YELLOW_TERRACOTTA: YELLOW_TERRACOTTA
+LIME_TERRACOTTA: LIME_TERRACOTTA
+PINK_TERRACOTTA: PINK_TERRACOTTA
+GRAY_TERRACOTTA: GRAY_TERRACOTTA
+LIGHT_GRAY_TERRACOTTA: LIGHT_GRAY_TERRACOTTA
+CYAN_TERRACOTTA: CYAN_TERRACOTTA
+PURPLE_TERRACOTTA: PURPLE_TERRACOTTA
+BLUE_TERRACOTTA: BLUE_TERRACOTTA
+BROWN_TERRACOTTA: BROWN_TERRACOTTA
+GREEN_TERRACOTTA: GREEN_TERRACOTTA
+RED_TERRACOTTA: RED_TERRACOTTA
+BLACK_TERRACOTTA: BLACK_TERRACOTTA
+SPRUCE: SPRUCE
+CRIMSON_NYLIUM: field_25702
+CRIMSON_STEM: field_25703
+CRIMSON_HYPHAE: field_25704
+WARPED_NYLIUM: field_25705
+WARPED_STEM: field_25706
+WARPED_HYPHAE: field_25707
+WARPED_WART: field_25708
