--- a/src/fabric-1.16.5/generator.yaml
+++ b/src/fabric-1.16.5/generator.yaml
@@ -1,8 +1,8 @@
-name: Minecraft Fabric for 1.16.5 - 0.32.5
+name: Minecraft Fabric for 1.16.5 - @buildfileversion
 basefeatures: [model_json, model_java, variables]
 partial_support: [armor, block, dimension, item, overlay, plant, procedure, entity]
 status: dev
-buildfileversion: 0.32.5
+buildfileversion: 0.34.6
 subversion: 1.0.2
 
 gradle:
