--- a/src/fabric-1.16.5/workspacebase/build.gradle
+++ b/src/fabric-1.16.5/workspacebase/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.6-SNAPSHOT'
+	id 'fabric-loom' version '0.7-SNAPSHOT'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -11,11 +11,11 @@ group = 'com.yourname.modid'
 
 dependencies {
 	minecraft "com.mojang:minecraft:1.16.5"
-	mappings "net.fabricmc:yarn:1.16.5+build.9:v2"
-	modImplementation "net.fabricmc:fabric-loader:0.11.3"
+	mappings "net.fabricmc:yarn:1.16.5+build.10:v2"
+	modImplementation "net.fabricmc:fabric-loader:0.11.6"
 
 	//Fabric api
-	modImplementation "net.fabricmc.fabric-api:fabric-api:0.34.6+1.16"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:0.36.0+1.16"
 }
 
 processResources {
@@ -31,8 +31,13 @@ processResources {
 	}
 }
 
-tasks.withType(JavaCompile) {
-	options.encoding = "UTF-8"
+tasks.withType(JavaCompile).configureEach {
+	it.options.encoding = "UTF-8"
+
+	def targetVersion = 8
+	if (JavaVersion.current().isJava9Compatible()) {
+		it.options.release = targetVersion
+	}
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
