--- a/src/fabric-1.16.5/mappings/tabs.yaml
+++ b/src/fabric-1.16.5/mappings/tabs.yaml
@@ -1,6 +1,6 @@
 _default: ItemGroup.MISC
 _mcreator_prefix: "CUSTOM:"
-_mcreator_map_template: "@JavaModName.@NAME"
+_mcreator_map_template: "@NAME.get()"
 No creative tab entry: null
 BUILDING_BLOCKS: ItemGroup.BUILDING_BLOCKS
 DECORATIONS: ItemGroup.DECORATIONS
